--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,3 +1,7 @@
 @import "./variable";
+
+/**
+  Only import what you need as you code ;).
+*/
 @import "node_modules/bootstrap/scss/root";
 @import "node_modules/bootstrap/scss/grid";
